--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "firebase": "^12.0.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.1.0",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
